hosts/envoy/bootstrap/envoy.json
{
  "admin": {
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 9901
      }
    }
  },
  "static_resources": {
    "listeners": [
      {
        "name": "http",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 10000
          }
        },
        "per_connection_buffer_limit_bytes": 16384,
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "fig",
                  "request_timeout": "10s",
                  "stream_idle_timeout": "10s",
                  "route_config": {
                    "name": "local",
                    "virtual_hosts": [
                      {
                        "name": "all",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "echo",
                              "timeout": "10s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "fig-waf-app",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter",
                        "dynamic_module_config": {
                          "name": "fig_match",
                          "module": {
                            "local": {
                              "filename": "__FIG_MODULE__"
                            }
                          },
                          "do_not_close": true
                        },
                        "filter_name": "fig-waf-app",
                        "filter_config": {
                          "@type": "type.googleapis.com/google.protobuf.StringValue",
                          "value": "__FIG_WAF_BUNDLE_CONFIG__"
                        }
                      }
                    },
                    {
                      "name": "fig-marker-app",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter",
                        "dynamic_module_config": {
                          "name": "fig_match",
                          "module": {
                            "local": {
                              "filename": "__FIG_MODULE__"
                            }
                          },
                          "do_not_close": true
                        },
                        "filter_name": "fig-marker-app",
                        "filter_config": {
                          "@type": "type.googleapis.com/google.protobuf.StringValue",
                          "value": "__FIG_MARKER_BUNDLE_CONFIG__"
                        }
                      }
                    },
                    {
                      "name": "fig-chat-plan",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.dynamic_modules.v3.DynamicModuleFilter",
                        "dynamic_module_config": {
                          "name": "fig_match",
                          "module": {
                            "local": {
                              "filename": "__FIG_MODULE__"
                            }
                          },
                          "do_not_close": true
                        },
                        "filter_name": "fig-match",
                        "filter_config": {
                          "@type": "type.googleapis.com/google.protobuf.StringValue",
                          "value": "{\"generation\": \"generation-1\", \"spec\": {\"schema\": \"fig.match/v1\", \"revision\": \"1\", \"name\": \"chat-plan\", \"phase\": \"request-body-complete\", \"facts\": [{\"name\": \"model\", \"extractor\": \"body-json-pointer/v1\", \"type\": \"string\", \"args\": {\"pointer\": \"/model\"}}, {\"name\": \"stream\", \"extractor\": \"body-json-pointer/v1\", \"type\": \"boolean\", \"args\": {\"pointer\": \"/stream\"}}], \"rules\": [{\"id\": \"support\", \"when\" [...]
                        }
                      }
                    },
                    {
                      "name": "envoy.filters.http.router",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                      }
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "echo",
        "type": "STRICT_DNS",
        "connect_timeout": "2s",
        "load_assignment": {
          "cluster_name": "echo",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "__FIG_BACKEND__",
                        "port_value": 8080
                      }
                    }
                  }
                }
              ]
            }
          ]
        }
      }
    ]
  }
}
